--- a/shoesboot-vue/src/assets/css/index.css
+++ b/shoesboot-vue/src/assets/css/index.css
@@ -1,8 +1,8 @@
 /*
  * @Description: 首页css样式
- * @Author: hai-27
+ * @Author: Aaron.Shen
  * @Date: 2020-02-07 16:23:00
- * @LastEditors: hai-27
+ * @LastEditors: Aaron.Shen
  * @LastEditTime: 2020-02-27 00:46:58
  */
 
